--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "PORT=3001 nodemon ./bin/www"
+    "start": "PORT=3001 node ./bin/www",
+    "devstart": "PORT=3001 nodemon ./bin/www",
+    "heroku-postbuild" : "cd client && npm run start"    
   },
   "dependencies": {
     "body-parser": "~1.18.2",
